Offer "mc item id123 2" notation
I know here new name collision, but i think this is irrelevant.

--- a/blocks_items_compactwindmills.css
+++ b/blocks_items_compactwindmills.css
@@ -1,10 +1,10 @@
-.mc.item_2790 {background-position:0px 0px;background-image:url('blocks_items_compactwindmills.png');}
-.mc.item_2790_0 {background-position:0px 0px;background-image:url('blocks_items_compactwindmills.png');}
-.mc.item_2790_1 {background-position:-32px 0px;background-image:url('blocks_items_compactwindmills.png');}
-.mc.item_2790_2 {background-position:-64px 0px;background-image:url('blocks_items_compactwindmills.png');}
-.mc.item_2790_3 {background-position:-96px 0px;background-image:url('blocks_items_compactwindmills.png');}
-.mc.item_2790_4 {background-position:-128px 0px;background-image:url('blocks_items_compactwindmills.png');}
-.mc.item_27900 {background-position:-160px 0px;background-image:url('blocks_items_compactwindmills.png');}
-.mc.item_27901 {background-position:-192px 0px;background-image:url('blocks_items_compactwindmills.png');}
-.mc.item_27902 {background-position:-224px 0px;background-image:url('blocks_items_compactwindmills.png');}
-.mc.item_27903 {background-position:-256px 0px;background-image:url('blocks_items_compactwindmills.png');}
+.mc.item.id2790 {background-position:0px 0px;background-image:url('blocks_items_compactwindmills.png');}
+.mc.item.id2790[class~="0"] {background-position:0px 0px;background-image:url('blocks_items_compactwindmills.png');}
+.mc.item.id2790[class~="1"] {background-position:-32px 0px;background-image:url('blocks_items_compactwindmills.png');}
+.mc.item.id2790[class~="2"] {background-position:-64px 0px;background-image:url('blocks_items_compactwindmills.png');}
+.mc.item.id2790[class~="3"] {background-position:-96px 0px;background-image:url('blocks_items_compactwindmills.png');}
+.mc.item.id2790[class~="4"] {background-position:-128px 0px;background-image:url('blocks_items_compactwindmills.png');}
+.mc.item.id27900 {background-position:-160px 0px;background-image:url('blocks_items_compactwindmills.png');}
+.mc.item.id27901 {background-position:-192px 0px;background-image:url('blocks_items_compactwindmills.png');}
+.mc.item.id27902 {background-position:-224px 0px;background-image:url('blocks_items_compactwindmills.png');}
+.mc.item.id27903 {background-position:-256px 0px;background-image:url('blocks_items_compactwindmills.png');}
