--- a/blocks_items_wildcaves3.css
+++ b/blocks_items_wildcaves3.css
@@ -1,40 +1,40 @@
-.mc.item_600_0 {background-position:0px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_600_1 {background-position:-32px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_600_2 {background-position:-64px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_600_3 {background-position:-96px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_600_4 {background-position:-128px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_600_5 {background-position:-160px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_600_6 {background-position:-192px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_600_7 {background-position:-224px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_600_8 {background-position:-256px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_600_9 {background-position:-288px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_600_10 {background-position:-320px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_600_11 {background-position:-352px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_600_12 {background-position:-384px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_601_0 {background-position:-416px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_601_1 {background-position:-448px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_601_2 {background-position:-480px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_601_3 {background-position:-512px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_601_4 {background-position:-544px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_601_5 {background-position:-576px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_601_6 {background-position:-608px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_601_7 {background-position:-640px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_601_8 {background-position:-672px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_601_9 {background-position:-704px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_601_10 {background-position:-736px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_601_11 {background-position:-768px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_601_12 {background-position:-800px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_602_0 {background-position:-832px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_602_1 {background-position:-864px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_602_2 {background-position:-896px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_602_3 {background-position:-928px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_602_4 {background-position:-960px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_602_5 {background-position:-992px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_602_6 {background-position:-1024px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_602_7 {background-position:-1056px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_602_8 {background-position:-1088px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_602_9 {background-position:-1120px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_603_0 {background-position:-1152px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_603_1 {background-position:-1184px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_603_2 {background-position:-1216px 0px;background-image:url(blocks_items_wildcaves3.png);}
-.mc.item_604_0 {background-position:-1248px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id600[class~="0"] {background-position:0px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id600[class~="1"] {background-position:-32px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id600[class~="2"] {background-position:-64px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id600[class~="3"] {background-position:-96px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id600[class~="4"] {background-position:-128px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id600[class~="5"] {background-position:-160px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id600[class~="6"] {background-position:-192px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id600[class~="7"] {background-position:-224px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id600[class~="8"] {background-position:-256px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id600[class~="9"] {background-position:-288px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id600[class~="10"] {background-position:-320px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id600[class~="11"] {background-position:-352px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id600[class~="12"] {background-position:-384px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id601[class~="0"] {background-position:-416px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id601[class~="1"] {background-position:-448px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id601[class~="2"] {background-position:-480px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id601[class~="3"] {background-position:-512px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id601[class~="4"] {background-position:-544px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id601[class~="5"] {background-position:-576px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id601[class~="6"] {background-position:-608px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id601[class~="7"] {background-position:-640px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id601[class~="8"] {background-position:-672px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id601[class~="9"] {background-position:-704px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id601[class~="10"] {background-position:-736px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id601[class~="11"] {background-position:-768px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id601[class~="12"] {background-position:-800px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id602[class~="0"] {background-position:-832px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id602[class~="1"] {background-position:-864px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id602[class~="2"] {background-position:-896px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id602[class~="3"] {background-position:-928px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id602[class~="4"] {background-position:-960px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id602[class~="5"] {background-position:-992px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id602[class~="6"] {background-position:-1024px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id602[class~="7"] {background-position:-1056px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id602[class~="8"] {background-position:-1088px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id602[class~="9"] {background-position:-1120px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id603[class~="0"] {background-position:-1152px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id603[class~="1"] {background-position:-1184px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id603[class~="2"] {background-position:-1216px 0px;background-image:url(blocks_items_wildcaves3.png);}
+.mc.item.id604[class~="0"] {background-position:-1248px 0px;background-image:url(blocks_items_wildcaves3.png);}
